--- a/wifibot_controller/package.xml
+++ b/wifibot_controller/package.xml
@@ -15,10 +15,39 @@
   <build_depend>gazebo_plugins</build_depend> 
   <build_depend>gazebo_ros</build_depend> 
   <build_depend>bullet</build_depend> 
+  <build_depend>urdf</build_depend>
+  <build_depend>gazebo</build_depend>
+  <build_depend>gazebo_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <build_depend>sensor_msgs</build_depend>
+  <build_depend>trajectory_msgs</build_depend>
+  <build_depend>std_srvs</build_depend>
+  <build_depend>roscpp</build_depend>
+  <build_depend>rospy</build_depend>
+  <build_depend>nodelet</build_depend>
+  <build_depend>angles</build_depend>
+  <build_depend>nav_msgs</build_depend>
+  <build_depend>urdf</build_depend>
+  <build_depend>tf</build_depend>
+  <build_depend>tf2_ros</build_depend>
 
-  <run_depend>tutorial_gazebo</run_depend> 
-  <run_depend>gazebo_plugins</run_depend> 
+  <run_depend>gazebo</run_depend>
   <run_depend>gazebo_ros</run_depend> 
+  <run_depend>gazebo_plugins</run_depend> 
+  <run_depend>gazebo_msgs</run_depend>
+  <run_depend>geometry_msgs</run_depend>
+  <run_depend>sensor_msgs</run_depend>
+  <run_depend>trajectory_msgs</run_depend>
+  <run_depend>std_srvs</run_depend>
+  <run_depend>roscpp</run_depend>
+  <run_depend>rospy</run_depend>
+  <run_depend>nodelet</run_depend>
+  <run_depend>angles</run_depend>
+  <run_depend>nav_msgs</run_depend>
+  <run_depend>urdf</run_depend>
+  <run_depend>tf</run_depend>
+  <run_depend>tf2_ros</run_depend>
+  <run_depend>tutorial_gazebo</run_depend> 
   <run_depend>bullet</run_depend> 
 
 
