--- a/tutorial_gazebo/config/forktruck.yaml
+++ b/tutorial_gazebo/config/forktruck.yaml
@@ -21,5 +21,8 @@ forktruck:
     type: effort_controllers/JointPositionController
     joint: rtooth_joint
     pid: {p: 10000.0, i: 10, d: 0.0}
-
+  /joint5_position_controller:
+    type: effort_controllers/JointPositionController
+    joint: camera_joint
+    pid: {p: 10000.0, i: 10, d: 0.0}
 
